kustomization/overlays/prod/immich/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,websecure-ext
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forwardauth-authelia-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: immich-ingress
spec:
  rules:
    - host: immich.tswn.us
      http:
        paths:
          - backend:
              service:
                name: immich-server
                port:
                  name: http
            path: /
            pathType: Prefix
